--- a/views/uploadform.html
+++ b/views/uploadform.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login</title>
+    <title>fileupload</title>
   </head>
   <body>
-    <form action="/login" method="POST">
-      <input type="email" name="email" placeholder="email" />
-      <input type="password" name="password" placeholder="password" />
-      <button type="submit">login</button>
+    <form action="/fileupload" method="POST" enctype="multipart/form-data">
+      <input type="file" name="file" />
+      <button type="submit">submit</button>
     </form>
   </body>
 </html>
